--- a/node/package.json
+++ b/node/package.json
@@ -20,7 +20,7 @@
         "reflect-metadata": "0.1.2",
         "rxjs": "5.0.0-beta.2",
         "zone.js": "0.6.10",
-        "bootstrap": "^3.3.6",
+        "bootstrap": "4.1.2",
         "ag-grid": "3.3.x",
         "ag-grid-ng2": "3.3.x"
   },
